--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <p>Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo chocolates. <br> Meu interesse por programação surgiu através dos games. <br>
     </p> 
     </p><strong>Nascida em Prados mas atualmente moro em Dores de Campos - MG</strong></p>
+    <hr>
+    <p><strong>Habilidades que mais me orgulho:</strong></p>
+    <ul><li>Compreensível</li>
+        <li>Gentil</li>
+        <li>Sei fazer mechas coloridas no cabelo</li>
+<p>Outras habilidades:</p>
+<ul><li>Desenhar</li>
+    <li>Facilidade em Aprender</li>
+    <li>Sou muito boa em League Off Legends</li>
 
 </body>
 </html>
