--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
     <p><strong>Habilidades que mais me orgulho:</strong></p>
     <ul><li>Compreensível</li>
         <li>Gentil</li>
-        <li>Sei fazer mechas coloridas no cabelo</li>
-<p>Outras habilidades:</p>
-<ul><li>Desenhar</li>
-    <li>Facilidade em Aprender</li>
-    <li>Sou muito boa em League Off Legends</li>
+        <li>Sei fazer mechas coloridas no cabelo</li></ul>
+   <p>Outras habilidades:</p>
+   <ul><li>Desenhar</li>
+        <li>Facilidade em Aprender</li>
+        <li>Sou muito boa em League Of Legends</li></ul>
+        <hr>
+        <p><strong>Meu blog favorito:</strong></p>
+        <p>Gosto de ficar por dentro de tudo que acontece em League Of Legendes através deste <a href="https://www.leagueoflegends.com/pt-br/news/" target="_blanck">blog</a></p>
+        <hr>
+
+
+
 
 </body>
 </html>
