adiciona link foto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Patrícia Silva Neri Pinto</h1> 
-    <img src="Patrícia Neri.jpeg"alt="foto da Patrícia"width="400px">
+    <img src="Patrícia Neri.jpeg"id="Foto"alt="foto da Patrícia"width="400px">
     <br>
     <p>Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo chocolates. <br> Meu interesse por programação surgiu através dos games. <br>
     </p> 
@@ -26,6 +26,9 @@
         <p><strong>Meu blog favorito:</strong></p>
         <p>Gosto de ficar por dentro de tudo que acontece em League Of Legendes através deste <a href="https://www.leagueoflegends.com/pt-br/news/" target="_blanck">blog</a></p>
         <hr>
+        <h3>Índice</h3>
+        <p><a href="#Foto">Foto</a></p>
+
 
 
 
