--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <h1>Patrícia Silva Neri Pinto</h1> 
     <img src="Patrícia Neri.jpeg"id="Foto"alt="foto da Patrícia"width="400px">
     <br>
-    <p>Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo chocolates. <br> Meu interesse por programação surgiu através dos games. <br>
-    </p> 
-    </p><strong>Nascida em Prados mas atualmente moro em Dores de Campos - MG</strong></p>
+    <p id="sobre mim"> Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo chocolates. <br> Meu interesse por programação surgiu através dos games. <br></p> 
+    </p><strong>Nascida em Prados mas atualmente moro em Dores de Campos - MG</strong>"</p>
     <hr>
-    <p><strong>Habilidades que mais me orgulho:</strong></p>
+    <p id="minhas habilidades"><strong>Habilidades que mais me orgulho:</strong></p>
     <ul><li>Compreensível</li>
         <li>Gentil</li>
         <li>Sei fazer mechas coloridas no cabelo</li></ul>
@@ -23,11 +22,14 @@
         <li>Facilidade em Aprender</li>
         <li>Sou muito boa em League Of Legends</li></ul>
         <hr>
-        <p><strong>Meu blog favorito:</strong></p>
+        <p id="meu blog"><strong>Meu blog favorito:</strong></p>
         <p>Gosto de ficar por dentro de tudo que acontece em League Of Legendes através deste <a href="https://www.leagueoflegends.com/pt-br/news/" target="_blanck">blog</a></p>
         <hr>
         <h3>Índice</h3>
         <p><a href="#Foto">Foto</a></p>
+        <p><a href="#sobre mim"">Sobre mim</a></p>
+        <p><a href="#minhas habilidades">Minhas habilidades</a></p>
+        <p><a href="#meu blog">Blog favorito</a></p>
 
 
 
