--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Patrícia Silva Neri Pinto</h1> 
     <img src="Patrícia Neri.jpeg"id="Foto"alt="foto da Patrícia"width="400px">
     <br>
-    <p id="sobre mim"> Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo chocolates. <br> Meu interesse por programação surgiu através dos games. <br></p> 
+    <p id="sobre mim"> Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo <em>chocolates</em>. <br> Meu interesse por programação surgiu através dos games. <br></p> 
     </p><strong>Nascida em Prados mas atualmente moro em Dores de Campos - MG</strong>"</p>
     <hr>
     <p id="minhas habilidades"><strong>Habilidades que mais me orgulho:</strong></p>
