--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ h4 {
     color: purple;
     font-family: monospace, sans-serif;
     line-height: 0px;
+    font-size: 17px;
 }
 
 h3 {
@@ -26,17 +27,23 @@ h3 {
     li {
         font-family: 'initial', sans-serif;
         color: rgb(43, 43, 3);
+        font-size: 17px;
     }
 
     p {
         color: rgb(43, 43, 3);
         font-family: 'initial', sans-serif;
+        font-size: 17px;
     }
     
     h1 {
         color: rgba(46, 3, 42, 0.904);
         font-family: 'monospace', sans-serif;
-    }
+        }
+
+        img {
+            border-radius: 35px;
+        }
 
     </style>
 </head>
@@ -50,6 +57,7 @@ h3 {
 
     <p id="sobre mim"> Sou uma garota que gosta de passar o tempo livre jogando ou assistindo animes, sou mineira e amo <em>chocolates</em>. <br> Meu interesse por programação surgiu através dos games. <br></p> 
     </p>
+
     <h4><strong>Nascida em Prados mas atualmente moro em Dores de Campos - MG</strong>"</h4>
     <br>
 
@@ -59,6 +67,8 @@ h3 {
         <li>Gentil</li>
         <li>Sei fazer mechas coloridas no cabelo</li></ul>
 
+        <br>
+
    <h3>Outras habilidades:</h3>
 
    <ul><li>Desenhar</li>
@@ -66,13 +76,14 @@ h3 {
         <li>Sou muito boa em League Of Legends</li></ul>
 
         <br>
+
         <h3 id="meu blog"><strong>Meu blog favorito:</strong></h3>
 
         <p>Gosto de ficar por dentro de tudo que acontece em League Of Legendes através deste <a href="https://www.leagueoflegends.com/pt-br/news/" target="_blanck">blog</a></p>
 
         <br>
 
-        <h3>Índice</h3>
+        <h3>Índice:</h3>
 
         <p><a href="#Foto">Foto</a></p>
         <p><a href="#sobre mim"">Sobre mim</a></p>
